fix for keyboard hiding inputs on mobile

--- a/Web/css/booked.css
+++ b/Web/css/booked.css
@@ -68,6 +68,9 @@ body {
   padding-top: 70px;
   background-color: #f2f2f2;
 }
+.adjust-nav-bar-static {
+  margin-top: -70px;
+}
 a,
 a:visited {
   color: #669999;
