--- a/Web/css/less/main.less
+++ b/Web/css/less/main.less
@@ -13,6 +13,10 @@ body {
   background-color: @color-body-background;
 }
 
+.adjust-nav-bar-static {
+  margin-top:-70px;
+}
+
 a, a:visited {
   color: @link-color;
 }
